--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "dayjs": "^1.11.10",
+        "react-perfect-scrollbar": "^1.5.8",
+        "react-tailwindcss-datepicker": "^1.6.6"
     }
 }
