--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@heroicons/react": "^2.1.3",
+        "@tanstack/react-form": "^0.19.4",
+        "@tanstack/react-table": "^8.16.0",
         "dayjs": "^1.11.10",
         "react-perfect-scrollbar": "^1.5.8",
         "react-tailwindcss-datepicker": "^1.6.6"
