--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "@heroicons/react": "^2.1.3",
         "@tanstack/react-form": "^0.19.4",
         "@tanstack/react-table": "^8.16.0",
+        "@uiball/loaders": "^1.3.1",
         "dayjs": "^1.11.10",
+        "react-hot-toast": "^2.4.1",
         "react-perfect-scrollbar": "^1.5.8",
         "react-tailwindcss-datepicker": "^1.6.6"
     }
