--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "@tanstack/react-table": "^8.16.0",
         "@uiball/loaders": "^1.3.1",
         "dayjs": "^1.11.10",
+        "ldrs": "^1.0.1",
         "react-hot-toast": "^2.4.1",
         "react-perfect-scrollbar": "^1.5.8",
         "react-tailwindcss-datepicker": "^1.6.6"
