--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "@heroicons/react": "^2.1.3",
+        "@inertiajs/inertia-react": "^0.8.1",
         "@tanstack/react-form": "^0.19.4",
         "@tanstack/react-table": "^8.16.0",
         "@uiball/loaders": "^1.3.1",
