--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "@headlessui/react": "^1.4.2",
+        "@headlessui/react": "^1.7.19",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
         "@vitejs/plugin-react": "^4.2.0",
@@ -30,6 +30,7 @@
         "ldrs": "^1.0.1",
         "react-hot-toast": "^2.4.1",
         "react-perfect-scrollbar": "^1.5.8",
-        "react-tailwindcss-datepicker": "^1.6.6"
+        "react-tailwindcss-datepicker": "^1.6.6",
+        "react-toastify": "^10.0.5"
     }
 }
