--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.9",
         "opcodesio/log-viewer": "^3.10",
         "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/laravel-medialibrary": "^11.7",
         "tightenco/ziggy": "^2.0"
     },
     "require-dev": {
