--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "@tanstack/react-form": "^0.19.4",
         "@tanstack/react-table": "^8.16.0",
         "@uiball/loaders": "^1.3.1",
+        "chart.js": "^4.4.3",
         "date-fns": "^3.6.0",
         "dayjs": "^1.11.10",
         "ldrs": "^1.0.1",
+        "react-chartjs-2": "^5.2.0",
         "react-hot-toast": "^2.4.1",
         "react-perfect-scrollbar": "^1.5.8",
         "react-tailwindcss-datepicker": "^1.6.6"
