--- a/package.json
+++ b/package.json
@@ -28,9 +28,14 @@
         "chart.js": "^4.4.3",
         "date-fns": "^3.6.0",
         "dayjs": "^1.11.10",
+        "export-to-csv": "^1.3.0",
+        "i18next": "^23.12.2",
+        "i18next-http-backend": "^2.5.2",
         "ldrs": "^1.0.1",
         "react-chartjs-2": "^5.2.0",
+        "react-countup": "^6.5.3",
         "react-hot-toast": "^2.4.1",
+        "react-i18next": "^15.0.0",
         "react-perfect-scrollbar": "^1.5.8",
         "react-tailwindcss-datepicker": "^1.6.6"
     }
