--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,8 @@
         "laravel/framework": "^11.0",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "league/flysystem-aws-s3-v3": "^3.28",
+        "maatwebsite/excel": "^3.1",
         "opcodesio/log-viewer": "^3.10",
         "simplesoftwareio/simple-qrcode": "^4.2",
         "spatie/laravel-medialibrary": "^11.7",
