--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "maatwebsite/excel": "^3.1",
         "opcodesio/log-viewer": "^3.10",
         "simplesoftwareio/simple-qrcode": "^4.2",
+        "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-medialibrary": "^11.7",
         "tightenco/ziggy": "^2.0"
     },
